force-app/main/default/objects/GLBP1_Asegurado_de_poliza__c/GLBP1_Asegurado_de_poliza__c.object-meta.xml
<CustomObject>
    <label>Asegurado de Póliza</label>
    <nameField>
        <label>Nombre del asegurado</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asegurados de Póliza</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>