force-app/main/default/objects/GLBP1_Asegurado_de_poliza__c/fields/GLB_P1_AutorizaDescuentoPlanilla__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_AutorizaDescuentoPlanilla__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Autoriza descuento x planilla</label>
    <type>Checkbox</type>
</CustomField>