force-app/main/default/objects/GLBP1_Asegurado_de_poliza__c/fields/GLB_P1_Capital__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_Capital__c</fullName>
    <label>Capital</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>