force-app/main/default/objects/GLBP1_Asegurado_de_poliza__c/fields/GLB_P1_CorreoElectronico__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_CorreoElectronico__c</fullName>
    <label>Correo electrónico</label>
    <type>Email</type>
</CustomField>