force-app/main/default/objects/GLBP1_Asegurado_de_poliza__c/fields/GLB_P1_Domicilio__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_Domicilio__c</fullName>
    <label>Domicilio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>