force-app/main/default/objects/GLBP1_Asegurado_de_poliza__c/fields/GLB_P1_FechaAutorizacionDxP__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_FechaAutorizacionDxP__c</fullName>
    <label>Fecha autorización DxP</label>
    <type>Date</type>
</CustomField>