force-app/main/default/objects/GLBP1_Asegurado_de_poliza__c/fields/GLB_P1_FechaNacimiento__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_FechaNacimiento__c</fullName>
    <label>Fecha nacimiento</label>
    <type>Date</type>
</CustomField>