force-app/main/default/objects/GLBP1_Asegurado_de_poliza__c/fields/GLB_P1_FrecuenciaPago__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_FrecuenciaPago__c</fullName>
    <label>Frecuencia de pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mensual</fullName>
            </value>
            <value>
                <fullName>Trimestral</fullName>
            </value>
            <value>
                <fullName>Semestral</fullName>
            </value>
            <value>
                <fullName>Anual</fullName>
            </value>
            <value>
                <fullName>Unica</fullName>
            </value>
            <value>
                <fullName>FP 1</fullName>
                <isActive>false</isActive>
                <label>FP 1</label>
            </value>
            <value>
                <fullName>FP 2</fullName>
                <isActive>false</isActive>
                <label>FP 2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>