force-app/main/default/objects/GLBP1_Asegurado_de_poliza__c/fields/GLB_P1_Moneda__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_Moneda__c</fullName>
    <label>Moneda</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M1</fullName>
            </value>
            <value>
                <fullName>M2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>