force-app/main/default/objects/GLBP1_Asegurado_de_poliza__c/fields/GLB_P1_NumeroPolizaExterno__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_NumeroPolizaExterno__c</fullName>
    <externalId>true</externalId>
    <label>Número de póliza externo</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>