force-app/main/default/objects/GLBP1_Asegurado_de_poliza__c/fields/GLB_P1_NumeroPolizaInterno__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_NumeroPolizaInterno__c</fullName>
    <label>Número de póliza interno</label>
    <length>20</length>
    <type>Text</type>
</CustomField>