force-app/main/default/objects/GLBP1_Asegurado_de_poliza__c/fields/GLB_P1_PolizaSeguro__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_PolizaSeguro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nombre de póliza</label>
    <referenceTo>InsurancePolicy</referenceTo>
    <relationshipLabel>Asegurado de Póliza</relationshipLabel>
    <relationshipName>Asegurados</relationshipName>
    <type>Lookup</type>
</CustomField>