force-app/main/default/objects/GLBP1_Asegurado_de_poliza__c/fields/GLB_P1_RutAsegurado__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_RutAsegurado__c</fullName>
    <label>Rut asegurado (ex titular)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>