force-app/main/default/objects/GLBP1_Asegurado_de_poliza__c/fields/GLB_P1_TelefonoMovil__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_TelefonoMovil__c</fullName>
    <label>Teléfono móvil</label>
    <type>Phone</type>
</CustomField>