force-app/main/default/objects/GLBP1_Asegurado_de_poliza__c/fields/GLBP1_EstadoCivil__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_EstadoCivil__c</fullName>
    <label>Estado civil</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Casado</fullName>
            </value>
            <value>
                <fullName>Divorciado</fullName>
            </value>
            <value>
                <fullName>Soltero</fullName>
            </value>
            <value>
                <fullName>Viudo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>