force-app/main/default/objects/GLBP1_Asegurado_de_poliza__c/fields/GLBP1_Region__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Region__c</fullName>
    <label>Región</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GLBP1_Region</valueSetName>
    </valueSet>
</CustomField>